# ecs_gl

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp
assets/animations/: haz.json  helmetGirl.json  jump.json
assets/models/: cube.glb  doll.glb  haz.glb  jump.glb
assets/shaders/grid/: frag.glsl
assets/shaders/simple/: frag.glsl
assets/shaders/uv/: frag.glsl  vert.glsl
assets/shaders/vat/: frag.glsl  vert.glsl
assets/textures/: grid.avif  reshape.py
include/: Common.h
include/Components/: Animation.cpp  Animation.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Movement.cpp  Movement.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.cpp  Vertex.h
include/Core/: MeshImporter.cpp  MeshImporter.h  MeshManager.cpp  MeshManager.h  Path.cpp  Path.h  Primitives.cpp  Primitives.h  ShaderManager.cpp  ShaderManager.h  SkinnedMeshImporter.cpp  SkinnedMeshImporter.h  TextureManager.cpp  TextureManager.h  Time.cpp  Time.h  Window.cpp  Window.h
include/Input/: Input.cpp  Input.h
include/Logging/: Logging.cpp  Logging.h
include/Math/: Geometry.cpp  Geometry.h
include/Rendering/camera/: Camera.cpp  Camera.h
include/Scene/: Scene.cpp  Scene.h
include/Systems/: Render.cpp  Render.h
include/assimp/: revision.h
